--- a/bonus-2/css/style.css
+++ b/bonus-2/css/style.css
@@ -7,14 +7,39 @@
 #info{
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 40px;
+    width: 80%;
+    margin: 30px auto;
 }
+
 img{
     width: 100%;
+    height: 300px;
+    overflow: hidden;
+    object-fit: cover;
+    object-position: top;
+    margin-bottom: 20px;
 }
 
 #info>*{
     margin:auto
+}
+
+.card{
+    width: 80%;
+    background-color: rgb(214, 209, 209);
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    text-align: center;
+    border-radius: 30px;
+    box-shadow: 0 0 20px black;
+    overflow: hidden;
+}
+
+.card:hover{
+    box-shadow: 0 0 20px black inset;
 }
 
 @media screen and (max-width: 768px){
